--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -29,6 +29,5 @@
 <body>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/trains">Trains</a></li>
-    <li><a href="/users">Users</a></li>
+    <li><a href="/logout">Log Out</a></li>
   </ul>
