--- a/views/registerUserForm.ejs
+++ b/views/registerUserForm.ejs
@@ -3,7 +3,7 @@
 <div>
   <h1>Register</h1>
 
-  <form action="/users/register" method="POST">
+  <form action="/register" method="POST">
   
     <label>First Name</label><br>
     <input type="text" name="first_name" placeholder="e.g: John"><br><br>
