--- a/views/users.ejs
+++ b/views/users.ejs
@@ -2,6 +2,9 @@
 
 <div>
   <h1>Hello! <%= user.first_name + ' ' + user.last_name %></h1>
+  <h2><a href="/users/<%= user.id %>/profile">My Profile</a></h2>
+  <h2><a href="/users/<%= user.id %>/book-ticket">Book Ticket</a></h2>
+  <h2><a href="/users/<%= user.id %>/my-ticket">See My Ticket</a></h2>
 </div>
  
 <%- include("partials/foot"); %>
