--- a/views/bookTicket.ejs
+++ b/views/bookTicket.ejs
@@ -3,25 +3,22 @@
 <div>
   <h1>Book Train Ticket</h1>
 
+  <h2><a href="/users/<%= user[0].id %>">Back</a></h2>
+
   <form action="/users/<%= user[0].id %>/book-ticket" method="POST">
 
     <label>Departure Date</label><br>
     <input type="date" name="depart_date"><br><br>
-  
-    <label>From</label><br>
-    <input type="text" name="from" placeholder="e.g: JKT"><br><br>
 
-    <label>To</label><br>
-    <input type="text" name="to" placeholder="e.g: BDG"><br><br>
-
-    <label>Class</label><br>
-    <select name="class_type">
-      <option value="">--SELECT--</option>
-      <option value="Economy">Economy</option>
-      <option value="Executive">Executive</option>
+    <label>List Train</label><br>
+    <select name="TrainId">
+        <option value="">--SELECT--</option>
+        <% instanceTrain.forEach(el => { %>
+          <option value="<%= el.id %>"><%= el.train_name %>, <%= el.route %>, <%= el.depart_time %>-<%= el.arrived_time %>, <%= el.class_type %>, <%= el.newPrice %></option>
+        <% }); %>
     </select><br><br>
 
-    <input type="submit" value="Find">
+    <input type="submit" value="Booking">
     <button type="button" value="Cancel"><a href="/users/<%= user[0].id %>">Cancel</a></button>
 
   </form><br><br>
