add nodemailer features

--- a/views/seeMyTicket.ejs
+++ b/views/seeMyTicket.ejs
@@ -46,7 +46,7 @@
               <td><%= el1.estimation %></td>
               <td><%= el1.class_type %></td>
               <td><%= el1.newPrice %></td>
-              <td><a href="">Refund</a> | <a href="">E-Ticket</a></td>
+              <td><a href="">Refund</a> | <a href="" id="sendMail">E-Ticket</a></td>
             </tr>
           <% } %>
         <% }); %>
